# SDR_Transfer

./: README.md  connection_structure.h
SDR_server/: CMakeLists.txt  connection_handler.cpp  connection_handler.h  device_listener.cpp  device_listener.h  main.cpp
client/: client.pro  clientdialog.cpp  clientdialog.h  clientdialog.ui  connection_info.cpp  connection_info.h  connectionclient.cpp  connectionclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signal_processing.cpp  signal_processing.h
